fix select css on firefox

--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,12 @@ body {
     text-align: center;
 }
 
+select {
+    background-color: white;
+    outline: none;
+    border: 1px solid black;
+}
+
 button {
     background-color: white;
     border: 1px solid black;
